# CliniMax-AI

./: .gitignore  INFRA_SETUP.md  LICENSE  README.md  index.html  package-lock.json  package.json  server.ts
.github/workflows/: backend.yml  frontend.yml
backend/: .gitignore  database.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py  spec.md
backend/app/agents/: __init__.py  base_agent.py  clini_clerker.py  clini_scribe.py  librarian.py  optimizer.py  validator.py
backend/app/core/: config.py  database.py  dependencies.py  prompt_loader.py
backend/app/models/: clinician.py  feedback.py  template.py
backend/app/prompts/: documentation_prompt.md  intake_prompt.md  scribe_prompt.md  transcription_prompt.md  triage_prompt.md
backend/app/routes/: audio.py  consultation.py  feedback.py  health.py  intake.py  template.py  whatsapp.py
backend/app/schemas/: audio.py  consultation.py  feedback.py  intake.py  librarian.py  template.py
backend/app/services/: analytics_service.py  audio_service.py  consultation_service.py  gemini_service.py  retrieval_service.py  template_service.py  validator_service.py
backend/tests/: conftest.py  test_clini_scribe.py  test_health.py  test_intake.py
docs/: architecture.md
frontend/: .env.example  README.md  metadata.json  package.json  render.yaml  server.ts
frontend/src/: App.tsx  main.tsx  types.ts
src/: App.tsx  index.css
src/components/: ClinicalIntakeScreen.tsx  CompleteScreen.tsx  DoctorDashboard.tsx  PatientDetailScreen.tsx  VisitorTypeScreen.tsx  WelcomeScreen.tsx
supabase/: config.toml
(+15 files in other folders)
