[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "click==8.4.1",
    "colorama==0.4.6",
    "fastapi[standard]==0.136.3",
    "google>=3.0.0",
    "google-genai>=2.8.0",
    "h11==0.16.0",
    "httpx2>=2.3.0",
    "idna==3.18",
    "iniconfig==2.3.0",
    "packaging==26.2",
    "pluggy==1.6.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings>=2.14.1",
    "pygments==2.20.0",
    "pytest==9.0.3",
    "python-dotenv==1.2.2",
    "starlette==1.2.1",
    "supabase>=2.31.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.49.0",
]
